--- a/My_portfolio/package.json
+++ b/My_portfolio/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.0.5",
+    "kursor": "^0.1.6",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
